# gpt-manipulator

./: CMakeLists.txt  LICENSE  README.md
include/: gpt-manipulator.h
src/: crc32.c  crc32.h  gpt-manipulator.c  gpt-manipulator.h
test/: CMakeLists.txt  main.c  main.cc  test.img
